--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "bp.jellena.shopify"
         minSdkVersion 11
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -17,9 +17,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            zipAlign true
         }
         android.applicationVariants.all{ variant ->
             variant.mergeAssets.doFirst {
@@ -42,16 +41,21 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:20.+'
-    compile 'com.android.support:support-v4:20.+'
+    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:support-v4:21.0.2'
 
     compile 'com.jakewharton:butterknife:5.1.2'
-    compile 'com.jakewharton.timber:timber:2.4.+'
+    compile 'com.jakewharton.timber:timber:2.4.0'
 
     compile 'com.github.johnkil.android-robototextview:robototextview:2.1.0'
 
     compile 'de.greenrobot:eventbus:2.2.1'
 
-    compile files('libs/activeandroid-3.0.jar')
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+
+    compile files('libs/activeandroid-3.1-beta.jar')
+    compile files('libs/nineoldandroids-2.4.0.jar')
 
 }
